[tool.poetry]
name = "camera-dewarping"
version = "0.1.0"
description = ""
authors = ["Mattia2700 <mattia2700franzin+dev@gmail.com>"]
readme = "README.md"
packages = [{include = "camera_dewarping"}]

[tool.poetry.dependencies]
python = "^3.10"
opencv-python = "^4.7.0.72"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
test = "camera_dewarping:main"