[tool.poetry]
name = "camera-dewarping"
version = "0.9"
description = "Dewarping tool for cameras"
authors = ["Mattia2700 <mattia2700franzin+dev@gmail.com>", "cannox227 <tommaso.canova00@gmail.com>"]
readme = "README.md"
packages = [{include = "camera_dewarping"}]

[tool.poetry.dependencies]
python = ">=3.10"
opencv-python = "^4.7.0.72"
numpy = "^1.24.2"
click = "^8.1.7"


[tool.poetry.group.dev.dependencies]
black = "^23.12.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
dewarp = "camera_dewarping.camera:main"
